update search category

--- a/templates/admin/layout/index.html
+++ b/templates/admin/layout/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/static/admin/css/styles.css" />
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-
+    <!-- Chặn người dùng f12 -->
+    <!-- <script src="/static/admin/js/protect.js"></script> -->
     <!-- SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>{{ .Title }}</title>
@@ -2924,7 +2925,7 @@
     </div>
     <div class="dark-transparent sidebartoggler"></div>
     <!-- Import Js Files -->
-    <script src="/static/admin/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/admin/js/bootstrap.bundle.min.js.map"></script>
     <script src="/static/admin/js/simplebar.min.js"></script>
     <script src="/static/admin/js/app.init.js"></script>
     <script src="/static/admin/js/theme.js"></script>
