--- a/static/user/css/Login.Head.styles.css
+++ b/static/user/css/Login.Head.styles.css
@@ -21883,7 +21883,7 @@ input#termsofservice {
             min-width: 196px;
             -webkit-appearance: none;
             -moz-appearance: none;
-            background-image: url('/images/uploaded-source/icon/arrow-down.png');
+            background-image: url('/static/user/images/icons/arrow-down.png');
             background-size: 12px;
             background-repeat: no-repeat;
             background-position-x: 90%;
@@ -22137,20 +22137,25 @@ input#termsofservice {
     }
 
     .customer-blocks .date-of-birth select {
-        max-width: 32%;
+        width: 32%; /* Thay vì max-width */
         font-weight: 400;
         font-size: 15px;
         line-height: 24px;
         color: #86868B;
         text-transform: capitalize;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        background-image: url('/images/uploaded-source/icon/arrow-down.png');
+        appearance: none; /* Ẩn kiểu mặc định */
+        
+        /* Định dạng hình nền dropdown */
+        background-image: url('/static/user/images/icons/arrow-down.png');
         background-size: 12px;
         background-repeat: no-repeat;
-        background-position-x: 84%;
-        background-position-y: 20px;
+        background-position: right 10px center;
+        
         padding-left: 15px;
+        padding-right: 30px; /* Để không che chữ */
+        border: 1px solid #ccc; /* Tăng độ rõ ràng */
+        border-radius: 5px;
+        height: 40px;
     }
 
     .customer-blocks button#register-button {
@@ -23985,7 +23990,7 @@ button.button-1.password-recovery-button {
         min-width: 196px;
         -webkit-appearance: none;
         -moz-appearance: none;
-        background-image: url(/images/uploaded-source/icon/arrow-down.png);
+        background-image: url(/static/user/images/icons/arrow-down.png);
         background-size: 12px;
         background-repeat: no-repeat;
         background-position-x: 90%;
@@ -24505,7 +24510,7 @@ button.button-1.password-recovery-button {
         border-radius: 8px;
         margin-top: 12px;
         min-height: 38px;
-        background-image: url(/images/uploaded-source/icon/arrow-down.png);
+        background-image: url(/static/user/images/icons/arrow-down.png);
         background-size: 11px;
         background-repeat: no-repeat;
         background-position-x: 91%;
@@ -24844,7 +24849,7 @@ button.button-1.password-recovery-button {
     .html-address-edit-page .inputs select {
         -webkit-appearance: none;
         -moz-appearance: none;
-        background-image: url(/images/uploaded-source/icon/arrow-down.png);
+        background-image: url(/static/user/images/icons/arrow-down.png);
         background-size: 12px;
         background-repeat: no-repeat;
         background-position-x: 95%;
@@ -25051,7 +25056,7 @@ button.button-1.password-recovery-button {
     .html-shopping-cart-page select, .html-product-details-page select {
         -webkit-appearance: none;
         -moz-appearance: none;
-        background-image: url(/images/uploaded-source/icon/arrow-down.png);
+        background-image: url(/static/user/images/icons/arrow-down.png);
         background-size: 12px;
         background-repeat: no-repeat;
         background-position-x: 97%;
@@ -28233,7 +28238,7 @@ button.button-1.password-recovery-button {
         right: 8px;
         -webkit-appearance: none;
         -moz-appearance: none;
-        background-image: url(/images/uploaded-source/icon/arrow-down.png);
+        background-image: url(/static/user/images/icons/arrow-down.png);
         background-size: 12px;
         background-repeat: no-repeat;
         background-position-x: 90%;
@@ -40283,7 +40288,7 @@ label, label + * {
 .customer-info-page .inputs select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    background-image: url(/images/uploaded-source/icon/arrow-down.png);
+    background-image: url(/static/user/images/icons/arrow-down.png);
     background-size: 12px;
     background-repeat: no-repeat;
     background-position-x: 90%;
@@ -40946,7 +40951,7 @@ html .all_popup-workshop .btn-primary {
 .workshop-page-detail select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    background-image: url(/images/uploaded-source/icon/arrow-down.png);
+    background-image: url(/static/user/images/icons/arrow-down.png);
     background-size: 12px;
     background-repeat: no-repeat;
     background-position-x: 96%;
